// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentMenuItem does not have LaunchLink if no url provided 1`] = `
<MenuItem
  dataTest="dhis2-uicore-menuitem"
  dense={true}
  label={
    <div
      className="menuItem"
    >
      <div
        className="label"
      >
        <span
          style={
            Object {
              "marginRight": "6px",
            }
          }
        >
          <UNDEFINED
            style={
              Object {
                "fill": "#6e7a8a",
              }
            }
          />
        </span>
        <span>
          Pinkie Pie
        </span>
      </div>
      <InsertButton />
    </div>
  }
  onClick={[MockFunction]}
/>
`;

exports[`ContentMenuItem has a LaunchLink when url is provided 1`] = `
<MenuItem
  dataTest="dhis2-uicore-menuitem"
  dense={true}
  label={
    <div
      className="menuItem"
    >
      <div
        className="label"
      >
        <span
          style={
            Object {
              "marginRight": "6px",
            }
          }
        >
          <UNDEFINED
            style={
              Object {
                "fill": "#6e7a8a",
              }
            }
          />
        </span>
        <span>
          Pinkie Pie
        </span>
        <LaunchLink
          url="http://ponies-r-us.com"
        />
      </div>
      <InsertButton />
    </div>
  }
  onClick={[MockFunction]}
/>
`;
